[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/common/collectables/cassette/cassette.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/common/collectables/cassette/cassette.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 5 )

[sub_resource type="Animation" id=5]
resource_name = "collected"
length = 0.1
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 0.101532, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "default_animation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CassetteSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.56917, 1.56917 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 0, -3 ) ]
}

[node name="Cassette" type="AudioStreamPlayer2D"]
script = ExtResource( 1 )

[node name="CassetteSprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )

[node name="CassetteArea" type="Area2D" parent="CassetteSprite"]

[node name="CassetteShape" type="CollisionShape2D" parent="CassetteSprite/CassetteArea"]
shape = SubResource( 3 )

[node name="CassetteAnimation" type="AnimationPlayer" parent="."]
anims/collected = SubResource( 5 )
anims/default_animation = SubResource( 2 )

[connection signal="finished" from="." to="." method="_on_Cassette_finished"]
[connection signal="area_entered" from="CassetteSprite/CassetteArea" to="." method="_on_CassetteArea_area_entered"]
